developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__ABN__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ABN__c</fullName>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>