developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__AbnAcn_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__AbnAcn_Error_Message__c</fullName>
    <label>ABN/ACN Error Message</label>
    <length>225</length>
    <type>Text</type>
</CustomField>