developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__ACN__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ACN__c</fullName>
    <label>ACN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>