developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Business_Postcode__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Postcode__c</fullName>
    <label>Business Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>