developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Business_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_State__c</fullName>
    <label>Business State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>