developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Business_Status__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Status__c</fullName>
    <label>Business Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>