developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Credit_Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Credit_Check_Amount__c</fullName>
    <label>Credit Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>