developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Entity_Name__c</fullName>
    <label>Entity Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>