developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Entity_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Entity_Type_Code__c</fullName>
    <label>Entity Type Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>