developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Entity_Type_Inteflow__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Entity_Type_Inteflow__c</fullName>
    <label>Entity Type (Inteflow)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLTR</fullName>
            </value>
            <value>
                <fullName>P/L</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>GOVT</fullName>
            </value>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>PTNR</fullName>
            </value>
            <value>
                <fullName>TRUSTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>