developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsABNBulkProcessed__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsABNBulkProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsABNBulkProcessed</label>
    <type>Checkbox</type>
</CustomField>