developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsACNBulkProcessed__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsACNBulkProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsACNBulkProcessed</label>
    <type>Checkbox</type>
</CustomField>