developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsBillingAddressBulkProcessed__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsBillingAddressBulkProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBillingAddressBulkProcessed</label>
    <type>Checkbox</type>
</CustomField>