developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsBillingAddressValid__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsBillingAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Billing Address</label>
    <type>Checkbox</type>
</CustomField>