developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsShippingAddressBulkProcessed__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsShippingAddressBulkProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsShippingAddressBulkProcessed</label>
    <type>Checkbox</type>
</CustomField>