developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsShippingAddressValid__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsShippingAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Shipping Address</label>
    <type>Checkbox</type>
</CustomField>