developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsValidABN__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsValidABN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid ABN</label>
    <type>Checkbox</type>
</CustomField>