developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__IsValidACN__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsValidACN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid ACN</label>
    <type>Checkbox</type>
</CustomField>