developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Legal_Name__c</fullName>
    <label>Legal Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>