developerProject/force-app/main/default/objects/Account/fields/OJSERLIB__Trading_As__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Trading_As__c</fullName>
    <label>Trading As</label>
    <type>TextArea</type>
</CustomField>